examples/errors/overlap-rules.sem
system Syntax => Bool

rule Overlap
----------
<a> => <a>

rule Overlap
----------
<b> => <b>
